--- a/tpl/index.html
+++ b/tpl/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
 	<meta charset="UTF-8" />
-	<title>OLIVIDA Start Page</title>
+	<title>liphy</title>
 	<link rel="stylesheet" type="text/css" media="screen"  href="/static/css/style.css" />
 	<link rel="shortcut icon" href="/static/img/favicon.ico" />
 </head>
